--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>URBNSTEP Platform 404 Product Detail</title>
+    <title>URBNSTEP 最新產品詳情頁面 Product Detail</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -14,52 +14,56 @@
     <%- include('./layout/header'); -%>
 
     <main class="container mb-40">
-      <div class="row py-64 py-md-0">
-        <div class="col-7 col-md-4">
+      <div class="row py-64 pb-md-40">
+        <div class="col-7 col-md-4 mb-md-24">
           <div class="product-row">
-            <div class="product-col mb-8 product-img">
-              <img src="../assets/images/image.png" alt="商品圖片" />
+            <div class="product-col mb-8">
+              <img src="/assets/images/image.png" alt="shoes" />
             </div>
             <div class="product-col mb-8 d-md-none">
-              <img src="../assets/images/image-1.png" alt="商品圖片1" />
+              <img src="/assets/images/image-1.png" alt="shoes" />
             </div>
             <div class="product-col mb-8 d-md-none">
-              <img src="../assets/images/image-2.png" alt="商品圖片2" />
+              <img src="/assets/images/image-2.png" alt="shoes" />
             </div>
             <div class="product-col mb-8 d-md-none">
-              <img src="../assets/images/image-3.png" alt="商品圖片3" />
+              <img src="/assets/images/image-3.png" alt="shoes" />
             </div>
             <div class="product-col mb-8 d-md-none">
-              <img src="../assets/images/image-4.png" alt="商品圖片4" />
+              <img src="/assets/images/image-4.png" alt="shoes" />
             </div>
             <div class="product-col mb-8 d-md-none">
-              <img src="../assets/images/image-5.png" alt="商品圖片5" />
+              <img src="/assets/images/image-5.png" alt="shoes" />
             </div>
             <div class="product-col d-md-none">
-              <img src="../assets/images/image-6.png" alt="商品圖片6" />
+              <img src="/assets/images/image-6.png" alt="shoes" />
             </div>
             <div class="product-col d-md-none">
-              <img src="../assets/images/image-7.png" alt="商品圖片7" />
+              <img src="/assets/images/image-7.png" alt="shoes" />
             </div>
           </div>
         </div>
         <div class="col-5 col-md-4">
-          <div class="mb-32 mt-md-24">
+          <nav class="mb-12 mb-md-8">
             <ol class="d-flex">
-              <li class="breadcrumb-item text-color">
-                <a href="" class="text-color">首頁</a>
+              <li class="breadcrumb-item">
+                <a href="index.html" class="breadCrumb-link">首頁</a>
               </li>
-              <li class="breadcrumb-item text-color">
-                <a href="" class="text-color">女鞋</a>
+              <li class="breadcrumb-item">
+                <a href="#" class="breadCrumb-link">女鞋</a>
               </li>
-              <li class="breadcrumb-item text-color">
-                <a href="" class="text-color">滑板鞋</a>
+              <li class="breadcrumb-item">
+                <a href="#" class="breadCrumb-link">滑板鞋</a>
               </li>
-              <li class="breadcrumb-item">Platform 404</li>
+              <li class="breadcrumb-item">
+                <a href="#" class="breadCrumb-link">Platform 404</a>
+              </li>
             </ol>
-            <h1 class="h2 mt-12 mt-md-8">Platform 404</h1>
-            <p class="h5 text-pri-400 my-16">
-              NT$2,600<del class="product-price">NT$3,200</del>
+          </nav>
+          <div class="mb-32">
+            <h2 class="h3 h4-md mb-16 mb-md-12">Platform 404</h2>
+            <p class="h5 h6-md text-pri-400 mb-16 mb-md-12">
+              NT$2,600<del class="del-price">NT$3,200</del>
             </p>
             <p class="mb-12">
               Platform 404
@@ -69,135 +73,156 @@
               鞋身選用柔軟皮革材質，打造出清新卻不失個性的氛圍，並以鞋面透氣孔設計提升穿著體驗，兼顧質感與舒適度，適合日常長時間著用。無論是街頭穿搭、日常通勤或週末出遊都能輕鬆駕馭。
             </p>
           </div>
+
           <div class="mb-32 mb-md-24">
             <h3 class="mb-8">顏色</h3>
             <div class="d-flex">
-              <div class="product-color mr-8">
-                <img
-                  src="../assets/images/product.png"
-                  alt="藍色"
-                  class="mb-4"
-                />
+              <div class="product-color me-8">
+                <img src="/assets/images/product.png" alt="blue" class="mb-4" />
                 <p>藍色</p>
               </div>
               <div class="product-color">
                 <img
-                  src="../assets/images/product-1.png"
-                  alt="卡其色"
+                  src="/assets/images/product-1.png"
+                  alt="blue"
                   class="mb-4"
                 />
                 <p>卡其色</p>
               </div>
             </div>
           </div>
+
           <div class="mb-48 mb-md-24">
             <h3 class="mb-8">尺寸</h3>
             <div class="d-flex fl-wrap gap-8 mb-8">
-              <button class="btn size-btn size-act size-hov">35(22.5cm)</button>
-              <button class="btn size-btn size-hov">36(23.0cm)</button>
-              <button class="btn size-btn size-hov">37(23.5cm)</button>
-              <button class="btn size-btn size-hov">38(24.0cm)</button>
-              <button class="btn size-btn size-hov">39(24.5cm)</button>
-              <button class="btn size-btn size-hov">40(25.0cm)</button>
-              <button class="btn size-btn size-hov">41(26.0cm)</button>
-              <button class="btn size-btn" disabled>42(26.5cm)</button>
-              <button class="btn size-btn" disabled>43(27.0cm)</button>
+              <button type="button" class="btn btn-product-size active">
+                35(22.5cm)
+              </button>
+              <button type="button" class="btn btn-product-size">
+                36(23.0cm)
+              </button>
+              <button type="button" class="btn btn-product-size">
+                37(23.5cm)
+              </button>
+              <button type="button" class="btn btn-product-size">
+                38(24.0cm)
+              </button>
+              <button type="button" class="btn btn-product-size">
+                39(24.5cm)
+              </button>
+              <button type="button" class="btn btn-product-size">
+                40(25.0cm)
+              </button>
+              <button type="button" class="btn btn-product-size">
+                41(26.0cm)
+              </button>
+              <button type="button" class="btn btn-product-size" disabled>
+                42(26.5cm)
+              </button>
+              <button type="button" class="btn btn-product-size" disabled>
+                43(27.0cm)
+              </button>
             </div>
-            <p class="text-danger-300">僅剩3雙</p>
+            <p class="text-sm text-danger-300">僅剩 3 雙</p>
           </div>
-          <div class="btn-like mb-32">
-            <button class="btn btn-light d-sm-none">
-              <i class="bi bi-heart"></i>加入收藏
+
+          <div class="product-action d-flex mb-32">
+            <button type="button" class="btn btn-light d-md-none">
+              <i class="bi bi-heart pe-8"></i>加入收藏
             </button>
-            <button class="btn btn-dark btn-booking">
-              <i class="bi bi-handbag"></i>門市預約試穿
+            <button type="button" class="btn btn-dark">
+              <i class="bi bi-handbag pe-8"></i>門市預約試穿
             </button>
-            <button
-              class="btn btn-light d-none d-sm-block"
-              style="border: none"
-            >
-              <i class="bi bi-heart"></i>
+            <button type="button" class="btn btn-light d-none d-md-block">
+              <i class="bi bi-heart p-md-12"></i>
             </button>
           </div>
+
           <ul>
-            <li class="py-12 product-info">
-              <h4 class="info-title">商品材質</h4>
-              <p class="mt-4">鞋面：合成皮革（Synthetic Leather）</p>
+            <li class="py-12 product-info-item">
+              <h4 class="mb-4 product-info-title">商品材質</h4>
+              <p>鞋面：合成皮革（Synthetic Leather）</p>
               <p>內裡：透氣網布材質，提升舒適與排汗性</p>
               <p>鞋底：EVA 輕量發泡橡膠，具備良好緩震與止滑效果</p>
               <p>鞋帶：聚酯纖維，耐拉扯不易鬆脫</p>
             </li>
-            <li class="py-12 product-info">
-              <h4 class="info-title">購買須知</h4>
-              <p class="mt-4">
-                商品顏色因螢幕顯示可能略有差異，請以實品為準。
-                建議首次穿著前試穿確認尺寸，避免影響退換貨權益。
+            <li class="py-12 product-info-item">
+              <h4 class="mb-4 product-info-title">購買須知</h4>
+              <p>商品顏色因螢幕顯示可能略有差異，請以實品為準。</p>
+              <p>建議首次穿著前試穿確認尺寸，避免影響退換貨權益。</p>
+              <p>
                 本商品為限量發售，庫存有限，如需更換尺寸請儘早聯繫客服協助處理。
               </p>
             </li>
-            <li class="py-12 product-info">
-              <h4 class="info-title">保養方式</h4>
-              <p class="mt-4">
-                建議以乾布或微濕軟布擦拭表面汙漬，避免機洗或長時間浸水。
-                收納時請放置於乾燥通風處，避免日曬及高溫導致變形或龜裂。
+
+            <li class="py-12 product-info-item">
+              <h4 class="mb-4 product-info-title">保養方式</h4>
+              <p>建議以乾布或微濕軟布擦拭表面汙漬，避免機洗或長時間浸水。</p>
+              <p>收納時請放置於乾燥通風處，避免日曬及高溫導致變形或龜裂。</p>
+              <p>
                 若需深層清潔，建議使用中性清潔劑並搭配柔刷輕刷，勿使用漂白水或強酸強鹼清潔劑。
               </p>
             </li>
           </ul>
         </div>
       </div>
-      <div class="py-48 py-md-40 best-select">
-        <h2 class="h4">你可能也喜歡...</h2>
-        <ul class="row mt-16 best-select-card">
-          <li class="col-3">
-            <a href="#">
-              <img
-                src="../assets/images/product-2.png"
+      <div class="py-48">
+        <h2 class="h4 mb-16">你可能也喜歡...</h2>
+        <div class="row">
+          <div class="col-3 col-md-0 me-md-16">
+            <a href="#"
+              ><img
+                src="/assets/images/product-2.png"
                 alt="VM001"
-                class="mb-12"
+                class="mb-12 mightLike"
               />
               <h4 class="h6 mb-4">VM001</h4>
-              <p>NT$2,600</p>
-            </a>
-          </li>
-          <li class="col-3">
-            <a href="#">
-              <img
-                src="../assets/images/product-3.png"
+              <p>NT$2,600</p></a
+            >
+          </div>
+          <div class="col-3 col-md-0">
+            <a href="#"
+              ><img
+                src="/assets/images/product-3.png"
                 alt="Melty Kiss"
-                class="mb-12"
+                class="mb-12 mightLike"
               />
               <h4 class="h6 mb-4">Melty Kiss</h4>
-              <p>NT$4,000</p>
-            </a>
-          </li>
-          <li class="col-3">
-            <a href="#">
-              <img
-                src="../assets/images/product-4.png"
+              <p>NT$4,000</p></a
+            >
+          </div>
+          <div class="col-3 d-md-none">
+            <a href="#"
+              ><img
+                src="/assets/images/product-4.png"
                 alt="BOOMBLOK"
                 class="mb-12"
               />
               <h4 class="h6 mb-4">BOOMBLOK</h4>
-              <p>NT$3,200</p>
-            </a>
-          </li>
-          <li class="col-3">
-            <a href="#">
-              <img
-                src="../assets/images/product-7.png"
+              <p>NT$3,200</p></a
+            >
+          </div>
+          <div class="col-3 d-md-none">
+            <a href="#"
+              ><img
+                src="/assets/images/product-7.png"
                 alt="Sugar Snap"
                 class="mb-12"
               />
               <h4 class="h6 mb-4">Sugar Snap</h4>
-              <p>NT$3,200</p>
-            </a>
-          </li>
-        </ul>
+              <p>NT$3,200</p></a
+            >
+          </div>
+        </div>
       </div>
     </main>
 
-    <%- include('./layout/joinus'); -%> <%- include('./layout/footer'); -%>
+    <div class="d-flex justify-center align-center py-24 bg-pri-200">
+      <p class="h4 h5-sm mr-24 me-md-16">加入會員取得9折優惠</p>
+      <button type="button" class="btn btn-dark">馬上註冊</button>
+    </div>
+
+    <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
   </body>
