--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -217,7 +217,7 @@
       </div>
     </main>
 
-    <div class="d-flex justify-center align-center py-24 bg-pri-200">
+    <div class="d-flex just-center ali-cent py-24 bg-pri-200">
       <p class="h4 h5-sm mr-24 me-md-16">加入會員取得9折優惠</p>
       <button type="button" class="btn btn-dark">馬上註冊</button>
     </div>
