--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -77,7 +77,7 @@
           <div class="mb-32 mb-md-24">
             <h3 class="mb-8">顏色</h3>
             <div class="d-flex">
-              <div class="product-color me-8">
+              <div class="product-color mr-8">
                 <img src="/assets/images/product.png" alt="blue" class="mb-4" />
                 <p>藍色</p>
               </div>
