--- a/product-detail.html
+++ b/product-detail.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
-    <script type="module" crossorigin src="/week4/assets/main-CDNniGeZ.js"></script>
-    <link rel="stylesheet" crossorigin href="/week4/assets/main-DgmjLwWM.css">
+    <script type="module" crossorigin src="/week4/assets/main-YE99ttMQ.js"></script>
+    <link rel="stylesheet" crossorigin href="/week4/assets/main-B4zcrBB5.css">
   </head>
   <body>
     <nav class="navbar-flex container justify-between .align-center">
@@ -92,7 +92,7 @@
           <div class="mb-32 mb-md-24">
             <h3 class="mb-8">顏色</h3>
             <div class="d-flex">
-              <div class="product-color me-8">
+              <div class="product-color mr-8">
                 <img src="/week4/assets/product-ByIiOSCa.png" alt="blue" class="mb-4" />
                 <p>藍色</p>
               </div>
