--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -126,7 +126,7 @@
             <p class="text-sm text-danger-300">僅剩 3 雙</p>
           </div>
 
-          <div class="product-action d-flex mb-32">
+          <div class="product-action d-flex mb-32 gap-8">
             <button type="button" class="btn btn-light d-md-none">
               <i class="bi bi-heart pe-8"></i>加入收藏
             </button>
