--- a/product-detail.html
+++ b/product-detail.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
-    <script type="module" crossorigin src="/week4/assets/main-YE99ttMQ.js"></script>
-    <link rel="stylesheet" crossorigin href="/week4/assets/main-B4zcrBB5.css">
+    <script type="module" crossorigin src="/week4/assets/main-CPL6ho2C.js"></script>
+    <link rel="stylesheet" crossorigin href="/week4/assets/main-CSQiAMlQ.css">
   </head>
   <body>
     <nav class="navbar-flex container justify-between .align-center">
@@ -141,7 +141,7 @@
             <p class="text-sm text-danger-300">僅剩 3 雙</p>
           </div>
 
-          <div class="product-action d-flex mb-32">
+          <div class="product-action d-flex mb-32 gap-8">
             <button type="button" class="btn btn-light d-md-none">
               <i class="bi bi-heart pe-8"></i>加入收藏
             </button>
